# aiida_tools

./: .aiida_tui_tags.json  README.md  pyproject.toml  snadbox.ipynb
aiida_error_inspector/: .aiida_tui_categorized.json  .aiida_tui_patterns.json  __init__.py  app.py  main.py  queries.py
aiida_error_inspector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: README.md  categorized.json  patterns.json  tags.json
src/: .aiida_tui_tags.json  README.md  aiida_group_nodes_tui.py  app.py  main.py  node_inspector.py  queries.py
